--- a/app/src/main/res/layout/questionbank_loginhome.xml
+++ b/app/src/main/res/layout/questionbank_loginhome.xml
@@ -191,7 +191,200 @@
         android:layout_marginStart="@dimen/dp_6"
         android:background="@color/color_E6E6E6" />
 
-    <android.support.constraint.ConstraintLayout
+    <!--底部板块-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_108"
+        android:layout_marginBottom="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_6"
+        android:layout_marginStart="@dimen/dp_6"
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="horizontal">
+        <!--中文有高频错题-->
+        <LinearLayout
+            android:id="@+id/linear_zh"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <!--冲刺训练营-->
+            <LinearLayout
+                android:id="@+id/question_training_camp_zh"
+                android:layout_width="@dimen/dp_163"
+                android:layout_height="@dimen/dp_48"
+                android:background="@mipmap/icon_qb_fun7"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:minWidth="@dimen/dp_163"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/dp_12">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_title_training_camp"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_title_training_camp_tips"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+            <!--错题-->
+            <LinearLayout
+                android:id="@+id/question_hight_errors_zh"
+                android:layout_width="@dimen/dp_163"
+                android:layout_height="@dimen/dp_48"
+                android:background="@mipmap/icon_qb_fun4_2"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:minWidth="@dimen/dp_163"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/dp_12">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_title_question_hight_errors"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_tips_question_hight_errors2"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+        </LinearLayout>
+        <!--高频错题_这个旨在英文下有-->
+        <LinearLayout
+            android:id="@+id/linear_eh"
+            android:layout_width="@dimen/dp_163"
+            android:layout_height="match_parent"
+            android:background="@mipmap/icon_qb_fun4"
+            android:orientation="vertical"
+            android:padding="@dimen/dp_12">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_title_question_hight_errors"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_14"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/question_tips_question_hight_errors2"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_12" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <com.flyco.roundview.RoundTextView
+                android:id="@+id/question_hight_errors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/dp_5"
+                android:paddingEnd="@dimen/dp_10"
+                android:paddingStart="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_5"
+                android:text="@string/question_tips_question_hight_errors3"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp_11"
+                app:rv_backgroundColor="@color/colorPrimary"
+                app:rv_isRadiusHalfHeight="true" />
+        </LinearLayout>
+        <!--知识点联系和组卷模考-->
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:orientation="vertical">
+
+            <!--自助练习-->
+            <LinearLayout
+                android:id="@+id/question_writes_really"
+                android:layout_width="@dimen/dp_163"
+                android:layout_height="@dimen/dp_48"
+                android:background="@mipmap/icon_qb_fun5"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:minWidth="@dimen/dp_163"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/dp_12">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_title_writes_really"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_tips_writes_really2"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <!--组卷模考-->
+            <LinearLayout
+                android:id="@+id/question_group_exam"
+                android:layout_width="@dimen/dp_163"
+                android:layout_height="@dimen/dp_48"
+                android:background="@mipmap/icon_qb_fun6"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:minWidth="@dimen/dp_163"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/dp_12">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_title_group_exam"
+                    android:textColor="@color/color_333333"
+                    android:textSize="@dimen/sp_12"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/question_tips_group_exam2"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_11" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+    <!--<android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_10"
@@ -303,5 +496,5 @@
                 android:textSize="@dimen/sp_11" />
         </LinearLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>-->
 </LinearLayout>
