--- a/app/src/main/res/layout/view_alertdialog.xml
+++ b/app/src/main/res/layout/view_alertdialog.xml
@@ -20,13 +20,13 @@
 
         <TextView
             android:id="@+id/txt_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_12"
             android:gravity="center"
             android:text="Message"
             android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_18"
+            android:textSize="@dimen/sp_17"
             android:textStyle="bold"
             android:visibility="gone"
             tools:ignore="HardcodedText" />
@@ -38,11 +38,11 @@
             android:layout_marginBottom="@dimen/dp_15"
             android:layout_marginEnd="@dimen/dp_15"
             android:layout_marginStart="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginTop="@dimen/dp_8"
             android:gravity="center"
             android:text="Message"
             android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_16"
+            android:textSize="@dimen/sp_15"
             tools:ignore="HardcodedText" />
     </LinearLayout>
 
@@ -59,7 +59,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_43"
+            android:layout_height="@dimen/dp_38"
             android:orientation="horizontal">
 
             <com.flyco.roundview.RoundTextView
@@ -72,7 +72,7 @@
                 android:stateListAnimator="@drawable/shape_selector_elevation"
                 android:text="@string/cancel"
                 android:textColor="@color/color_666666"
-                android:textSize="16sp"
+                android:textSize="@dimen/sp_14"
                 app:rv_backgroundColor="@android:color/white"
                 app:rv_backgroundPressColor="@color/color_E6E6E6" />
 
@@ -92,7 +92,7 @@
                 android:stateListAnimator="@drawable/shape_selector_elevation"
                 android:text="@string/confirm"
                 android:textColor="@color/colorPrimary"
-                android:textSize="16sp"
+                android:textSize="@dimen/sp_14"
                 app:rv_backgroundColor="@android:color/white"
                 app:rv_backgroundPressColor="@color/color_E6E6E6" />
         </LinearLayout>
